Update README.md
Dodanie instrukcji uruchamiania Telemetry Viewer